[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Power_Ups.gd" type="Script" id=1]
[ext_resource path="res://imgs/texts/HamletOrNot.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[node name="Power_Ups" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -520.0
margin_top = -340.0
margin_right = 520.0
margin_bottom = 340.0
color = Color( 0, 0, 0, 0.784314 )

[node name="box" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -208.0
margin_right = 450.0
margin_bottom = 208.0
custom_constants/separation = 5
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="box"]
margin_left = 50.0
margin_right = 251.0
margin_bottom = 416.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="box/VBoxContainer"]
margin_top = 12.0
margin_right = 201.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "Power"
align = 1

[node name="Label2" type="Label" parent="box/VBoxContainer"]
margin_top = 115.0
margin_right = 201.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 1 )
text = "Speed"
align = 1

[node name="Label3" type="Label" parent="box/VBoxContainer"]
margin_top = 218.0
margin_right = 201.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 1 )
text = "Stamina"

[node name="Label4" type="Label" parent="box/VBoxContainer"]
margin_top = 321.0
margin_right = 201.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 1 )
text = "HP"
align = 1

[node name="buttons" type="VBoxContainer" parent="box"]
margin_left = 256.0
margin_right = 305.0
margin_bottom = 416.0
custom_constants/separation = 20
alignment = 1

[node name="power" type="Button" parent="box/buttons"]
margin_right = 49.0
margin_bottom = 89.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0.164706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.454902, 0.454902, 0.454902, 1 )
text = "+"
flat = true

[node name="speed" type="Button" parent="box/buttons"]
margin_top = 109.0
margin_right = 49.0
margin_bottom = 198.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0.164706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.454902, 0.454902, 0.454902, 1 )
text = "+"
flat = true

[node name="stamina" type="Button" parent="box/buttons"]
margin_top = 218.0
margin_right = 49.0
margin_bottom = 307.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0.164706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.454902, 0.454902, 0.454902, 1 )
text = "+"
flat = true

[node name="hp" type="Button" parent="box/buttons"]
margin_top = 327.0
margin_right = 49.0
margin_bottom = 416.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0.164706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.454902, 0.454902, 0.454902, 1 )
text = "+"
flat = true

[node name="VSeparator" type="VSeparator" parent="box"]
margin_left = 310.0
margin_right = 370.0
margin_bottom = 416.0
rect_min_size = Vector2( 60, 0 )
custom_styles/separator = SubResource( 2 )

[node name="current" type="VBoxContainer" parent="box"]
editor/display_folded = true
margin_left = 375.0
margin_right = 440.0
margin_bottom = 416.0
custom_constants/separation = 20
alignment = 1

[node name="power" type="Label" parent="box/current"]
margin_top = 12.0
margin_right = 65.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="speed" type="Label" parent="box/current"]
margin_top = 115.0
margin_right = 65.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 1 )
text = "160"

[node name="stamina" type="Label" parent="box/current"]
margin_top = 218.0
margin_right = 65.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="hp" type="Label" parent="box/current"]
margin_top = 321.0
margin_right = 65.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 1 )
text = "5"

[node name="arrows" type="VBoxContainer" parent="box"]
editor/display_folded = true
margin_left = 445.0
margin_right = 488.0
margin_bottom = 416.0
custom_constants/separation = 20
alignment = 1

[node name="power" type="Label" parent="box/arrows"]
margin_top = 12.0
margin_right = 43.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "->"

[node name="speed" type="Label" parent="box/arrows"]
margin_top = 115.0
margin_right = 43.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 1 )
text = "->"

[node name="stamina" type="Label" parent="box/arrows"]
margin_top = 218.0
margin_right = 43.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 1 )
text = "->"

[node name="stamina2" type="Label" parent="box/arrows"]
margin_top = 321.0
margin_right = 43.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 1 )
text = "->"

[node name="next" type="VBoxContainer" parent="box"]
editor/display_folded = true
modulate = Color( 1, 0.0705882, 0.223529, 1 )
margin_left = 493.0
margin_right = 558.0
margin_bottom = 416.0
custom_constants/separation = 20
alignment = 1

[node name="power" type="Label" parent="box/next"]
margin_top = 12.0
margin_right = 65.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="speed" type="Label" parent="box/next"]
margin_top = 115.0
margin_right = 65.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 1 )
text = "160"

[node name="stamina" type="Label" parent="box/next"]
margin_top = 218.0
margin_right = 65.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="hp" type="Label" parent="box/next"]
margin_top = 321.0
margin_right = 65.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 1 )
text = "6"

[node name="VSeparator2" type="VSeparator" parent="box"]
margin_left = 563.0
margin_right = 623.0
margin_bottom = 416.0
rect_min_size = Vector2( 60, 0 )
custom_styles/separator = SubResource( 2 )

[node name="price" type="VBoxContainer" parent="box"]
editor/display_folded = true
margin_left = 628.0
margin_right = 707.0
margin_bottom = 416.0
custom_constants/separation = 20
alignment = 1

[node name="power" type="Label" parent="box/price"]
margin_top = 12.0
margin_right = 79.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "100"

[node name="speed" type="Label" parent="box/price"]
margin_top = 115.0
margin_right = 79.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 1 )
text = "200"

[node name="stamina" type="Label" parent="box/price"]
margin_top = 218.0
margin_right = 79.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 1 )
text = "400"

[node name="hp" type="Label" parent="box/price"]
margin_top = 321.0
margin_right = 79.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 1 )
text = "400"

[node name="prices2" type="VBoxContainer" parent="box"]
editor/display_folded = true
margin_left = 712.0
margin_right = 850.0
margin_bottom = 416.0
custom_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="box/prices2"]
margin_top = 22.0
margin_right = 138.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
text = "fragments"
valign = 1

[node name="Label2" type="Label" parent="box/prices2"]
margin_top = 130.0
margin_right = 138.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 3 )
text = "fragments"

[node name="Label3" type="Label" parent="box/prices2"]
margin_top = 238.0
margin_right = 138.0
margin_bottom = 286.0
custom_fonts/font = SubResource( 3 )
text = "fragments"

[node name="Label4" type="Label" parent="box/prices2"]
margin_top = 346.0
margin_right = 138.0
margin_bottom = 394.0
custom_fonts/font = SubResource( 3 )
text = "fragments"

[node name="Label" type="Label" parent="."]
margin_left = 550.0
margin_top = 230.0
margin_right = 764.0
margin_bottom = 313.0
custom_fonts/font = SubResource( 1 )
text = "Statistics"
align = 1

[node name="Label3" type="Label" parent="."]
margin_left = 870.0
margin_top = 230.0
margin_right = 1062.0
margin_bottom = 313.0
custom_fonts/font = SubResource( 1 )
text = "Level"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 1210.0
margin_top = 230.0
margin_right = 1326.0
margin_bottom = 313.0
custom_fonts/font = SubResource( 1 )
text = "Price"
align = 1

[node name="fragments" type="Label" parent="."]
margin_left = 630.0
margin_top = 790.0
margin_right = 1300.0
margin_bottom = 838.0
custom_fonts/font = SubResource( 3 )
text = "Humanity fragments: "
align = 1

[node name="back" type="Button" parent="."]
margin_left = 450.0
margin_top = 810.0
margin_right = 538.0
margin_bottom = 871.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 0.627451 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Back"
flat = true

[connection signal="pressed" from="box/buttons/power" to="." method="_on_power_pressed"]
[connection signal="pressed" from="box/buttons/speed" to="." method="_on_speed_pressed"]
[connection signal="pressed" from="box/buttons/stamina" to="." method="_on_stamina_pressed"]
[connection signal="pressed" from="box/buttons/hp" to="." method="_on_hp_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
